remove a part of package.json

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,7 +2,7 @@
   "name": "umaibar_web",
   "version": "1.0.0",
   "description": "Nuxt.js project",
-  "author": "yasudak <yasuda_kunihiro@ogis-ri.co.jp>",
+  "author": "yasudakn",
   "private": true,
   "scripts": {
     "dev": "nuxt",
